fixup! more css spacing

--- a/css/shoppingcart.css
+++ b/css/shoppingcart.css
@@ -15,7 +15,7 @@
   height: 187px;
   padding: 20px;
   display: block;
-  max-width: 100%;
+  max-width: calc(100% - 40px);
 }
 
 .shopping-cart .product-name{
